OP-1206: Fixed 3 issues with the about dialog dealing with the image logo not displaying properly.
1. The image was being cut off in the large text view.
2. Redid the way the brand-logo.png is loaded.  It was being loaded in the .gsp file and being cached so when you switched themes it would not reload the new image from the theme directory. I now have it being set by classes and css.
3. There was an issue where the top of the logo was being cut off and that has been resolved as well.

--- a/web-app/themes/common/stylesheets/_aboutWindow.scss
+++ b/web-app/themes/common/stylesheets/_aboutWindow.scss
@@ -30,4 +30,8 @@
     .x-tool {
 		*left: 47% !important;    
     }
+
+    .x-window-header {
+        padding: 9px 9px 0px 9px;
+    }
 }
